# vulkanphotobooth

./: .gitignore  ASSET_LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageReaderListener.cpp  ImageReaderListener.h  config.h.in  native-lib.cpp  native-lib.h  ring_buffer.h
app/src/main/cpp/cmakemodules/: Makefile  RuAddCFlag.cmake  RuAddCXXFlag.cmake  RuAddCompilerFlagsCommon.cmake  RuAddCompilerFlagsGen.py  RuAddSpirV.cmake  RuCheckCAttribute.cmake  RuCheckCXXAttribute.cmake  RuCheckCompilerAttributeGen.py
app/src/main/cpp/shaders/: filter_beeeye.glsl  filter_colour_blast.glsl  filter_drawing4.glsl  filter_lighting.glsl  filter_watercolour_blur.glsl  quad.frag.glsl  quad.vert.glsl
app/src/main/cpp/vulkan-utils/: CMakeLists.txt  FilterParams.h  VulkanAHBManager.cpp  VulkanAHBManager.h  VulkanAHardwareBufferImage.cpp  VulkanAHardwareBufferImage.h  VulkanImageRenderer.cpp  VulkanImageRenderer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  vulkan_utils.cpp  vulkan_utils.h
app/src/main/cpp/vulkan_wrapper/: vulkan_wrapper.cpp  vulkan_wrapper.h
app/src/main/java/dev/hadrosaur/vulkanphotobooth/: CameraParams.kt  CameraUtils.kt  DeviceInfo.kt  FilterParams.kt  ImageUtils.kt  LeftPanelActivity.kt  MainActivity.kt  MeasureUtils.kt  PrefHelper.kt  RightPanelActivity.kt  VulkanViewModel.kt
app/src/main/java/dev/hadrosaur/vulkanphotobooth/cameracontroller/: Camera2CaptureCallback.kt  Camera2CaptureSessionCallback.kt  Camera2Controller.kt  Camera2DeviceStateCallback.kt  Camera2PreviewSessionStateCallback.kt
app/src/main/res/anim/: progress_indeterminate_horizontal_rect1.xml  progress_indeterminate_horizontal_rect2.xml
app/src/main/res/drawable/: circular_spinner.xml  count_down_circle_background.xml  filter_button_disabled.xml  filter_button_disabled_drawable.xml  filter_button_disabled_hover_drawable.xml  filter_button_enabled.xml  filter_button_enabled_drawable.xml  filter_button_enabled_hover_drawable.xml  ic_launcher_background.xml  progress_bar_horizontal.xml  progress_indeterminate.xml  slider_bar.xml  slider_control.xml  vector_drawable_indeterminate.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_left_panel.xml  activity_main.xml  activity_right_panel.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: progress_indeterminate_horizontal_rect1_scalex.xml  progress_indeterminate_horizontal_rect1_translatex.xml  progress_indeterminate_horizontal_rect2_scalex.xml  progress_indeterminate_horizontal_rect2_translatex.xml
gradle/wrapper/: gradle-wrapper.properties
